# GLM-OCR

./: HANDOFF.md
apps/knowledge-bank/: .gitignore  README.md  commands.txt  config.example.yaml  pyproject.toml
apps/knowledge-bank/src/knowledge_bank/: __init__.py  chunker.py  cli.py  config.py  ocr_service.py  pipeline.py  store.py
apps/knowledge-bank/tests/: __init__.py  test_chunker.py  test_config.py  test_extract.py  test_ocr_service.py  test_store.py
