[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowledge-bank"
version = "0.1.0"
description = "Local OCR-to-knowledge-bank pipeline powered by GLM-OCR"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
  {name = "GLM-OCR Contributors"}
]
keywords = ["ocr", "glm-ocr", "knowledge-base", "rag", "embeddings", "pdf"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "glmocr>=0.1.5",
  "typer>=0.15.0",
  "pydantic>=2.12.0",
  "pydantic-settings>=2.1.0",
  "PyYAML>=6.0.0",
  "python-dotenv>=1.2.0",
  "langchain-text-splitters>=0.3.0",
  "sentence-transformers>=3.0.0",
  "chromadb>=0.6.0",
  "tqdm>=4.62.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "black>=26.3.0",
  "mypy>=1.19.0",
]

[project.scripts]
kb = "knowledge_bank.cli:app"
knowledge-bank = "knowledge_bank.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_bank"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
